# Laboratory-2-UPP

./: .-0.1.0.tgz  .gitignore  CMakeLists.txt  Dockerfile.app  Dockerfile.web  README.md  docker-compose.yml  entrypoint.sh  main.cpp
.github/workflows/: docker-web-tests.yml:
helm/test-repo-chart/: values.yaml
helm/test-repo-chart/templates/: app-deployment.yaml  web-deployment.yaml  web-service.yaml
k8s/: account.yaml  app-deployment.yaml  bind.yaml  web-deployment.yaml  web-service.yaml
